--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "firebase": "^4.1.3",
     "ionic-angular": "3.5.0",
     "ionicons": "3.0.0",
+    "promise-polyfill": "8.1.3",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
